fix(cinema): fix the repo vertical alignment issue on early iOS

--- a/cinema/static/css/cinema.css
+++ b/cinema/static/css/cinema.css
@@ -78,6 +78,7 @@ main {
     height: 300px;
     width: 20%;
     text-align: center;
+    vertical-align: middle;
     position: relative;
 }
 @media (max-width: 1400px) {
